Adding changes in step functions

--- a/IaC/template-step.yaml
+++ b/IaC/template-step.yaml
@@ -47,6 +47,11 @@ Resources:
               "Resource": "arn:aws:states:::glue:startJobRun.sync",
               "Parameters": {
                 "JobName": "GlueTransform"
+                "Arguments": {
+                  "--key": "$$.State.Enter.Timestamp",
+                  "--INPUT_BUCKET": "s3://awdataclouders-s3-data-2/Raw/",
+                  "--OUTPUT_BUCKET": "s3://awdataclouders-s3-data-2/Results/"
+                }
               },
               "Next": "GlueStartJobRunQuality"
             },
@@ -60,7 +65,7 @@ Resources:
             }
           }
         }
-        
+
 Outputs:
   ArnStepFunction:
     Value: !GetAtt MyStepFunction.Arn
