Adding changes in step functions

--- a/IaC/template-step.yaml
+++ b/IaC/template-step.yaml
@@ -40,7 +40,8 @@ Resources:
                   }
                 }
               ],
-              "Next": "GlueStartJobRun"
+              "Next": "GlueStartJobRun",
+              "ResultPath": "$.ParallelResult"
             },
             "GlueStartJobRun": {
               "Type": "Task",
