--- a/IaC/template-step.yaml
+++ b/IaC/template-step.yaml
@@ -25,6 +25,7 @@ Resources:
                     "LambdaInvokeUSA": {
                       "Type": "Task",
                       "Resource": "arn:aws:lambda:us-east-1:135808920063:function:Extract_API_COVID_USA",
+                      "ResultPath": "$.Timestamp",
                       "End": true
                     }
                   }
@@ -35,6 +36,7 @@ Resources:
                     "LambdaInvokeCOL": {
                       "Type": "Task",
                       "Resource": "arn:aws:lambda:us-east-1:135808920063:function:Extract_API_COVID_COL",
+                      "ResultPath": "$.Timestamp",
                       "End": true
                     }
                   }
