--- a/IaC/template-glue.yaml
+++ b/IaC/template-glue.yaml
@@ -6,28 +6,29 @@ Parameters:
         Type: String
 
 Resources:
-  rGlueJobTransforma:
-      Type: AWS::Glue::Job
-      Properties:
-        Command:
-          Name: glueetl
-          PythonVersion: 3
-          ScriptLocation: "s3://awdataclouders-s3-glue-code-2/transform.py"
-        DefaultArguments: {
-          "--job-language": "python",
-          "--job-bookmark-option": "job-bookmark-enable",
-          "--spark-event-logs-path": "s3://awdataclouders-s3-glue-code-2/",
-          "--enable-spark-ui": "true",
-          "--enable-glue-datacatalog": "",
-          "--enable-metrics": ""
-          }
-        ExecutionProperty:
-          MaxConcurrentRuns: 2
-        MaxRetries: 1
-        Name: GlueTransform
-        Role: !Ref roleglue
-        WorkerType: Standard
-        NumberOfWorkers: 1
+rGlueJobTransforma:
+  Type: AWS::Glue::Job
+  Properties:
+    Command:
+      Name: glueetl
+      PythonVersion: 3
+      ScriptLocation: "s3://awdataclouders-s3-glue-code-2/transform.py"
+    GlueVersion: "4.0"
+    DefaultArguments:
+      "--job-language": "python"
+      "--job-bookmark-option": "job-bookmark-enable"
+      "--spark-event-logs-path": "s3://awdataclouders-s3-glue-code-2/"
+      "--enable-spark-ui": "true"
+      "--enable-glue-datacatalog": "true"  
+      "--enable-metrics": "true"           
+    ExecutionProperty:
+      MaxConcurrentRuns: 2
+    MaxRetries: 1
+    Name: GlueTransform
+    Role: !Ref roleglue
+    WorkerType: Standard
+    NumberOfWorkers: 1
+
 
   rGlueJobDataQuality:
       Type: AWS::Glue::Job
@@ -36,14 +37,14 @@ Resources:
           Name: glueetl
           PythonVersion: 3
           ScriptLocation: "s3://awdataclouders-s3-glue-code-2/quality.py"
-        DefaultArguments: {
-          "--job-language": "python",
-          "--job-bookmark-option": "job-bookmark-enable",
-          "--spark-event-logs-path": "s3://awdataclouders-s3-glue-code-2/",
-          "--enable-spark-ui": "true",
-          "--enable-glue-datacatalog": "",
-          "--enable-metrics": ""
-          }
+        GlueVersion: "4.0"
+        DefaultArguments: 
+          "--job-language": "python"
+          "--job-bookmark-option": "job-bookmark-enable"
+          "--spark-event-logs-path": "s3://awdataclouders-s3-glue-code-2/"
+          "--enable-spark-ui": "true"
+          "--enable-glue-datacatalog": "true"  
+          "--enable-metrics": "true" 
         ExecutionProperty:
           MaxConcurrentRuns: 2
         MaxRetries: 1
