--- a/IaC/template-iam.yml
+++ b/IaC/template-iam.yml
@@ -74,9 +74,7 @@ Resources:
                   - s3:AbortMultipartUpload
                   - s3:DeleteObject
                   - s3:DeleteObjectVersion
-                Resource:
-                  - !Join ["", ["arn:aws:s3:::",!Ref Bucketdataconsume]]
-                  - !Join ["", ["arn:aws:s3:::",!Ref Bucketdataconsume,"/*"]]
+                Resource: "*"
         - PolicyName: glue
           PolicyDocument:
             Version: "2012-10-17"
